minishift-scripts/istio-ingress-service-authors.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtualservice-ingress-web-api-web-app
spec:
  hosts:
  - "*"
  gateways:
  - default-gateway-ingress-http
  http:
  - match:
    - uri:
        prefix: /health
    route:
    - destination:
        host: authors
        port:
          number: 3000
  - match:
    - uri:
        prefix: /api/v1/getauthor
    route:
    - destination:
        host: authors
        subset: v1
---
